[gd_scene load_steps=2 format=3 uid="uid://spell_cast_ui_001"]

[ext_resource type="Script" path="res://ui/spell_cast_ui.gd" id="1_spell"]

[node name="SpellCastUI" type="CanvasLayer"]
script = ExtResource("1_spell")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="SpellTranscript" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Spell: IGNIS MAJORIS"
horizontal_alignment = 1

[node name="InputLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Type the spell:"
horizontal_alignment = 1

[node name="UserInput" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1

